# enity

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
src/enity/: main.py
src/enity/commands/: check.py  generate.py  load.py  suggest_layout.py  sync.py  tidy.py
src/enity/core/: config.py  exceptions.py  grouper.py  io.py  parser.py
src/enity/utils/: console.py
tests/: test_check_command.py  test_grouper.py  test_parser.py  test_suggest_layout_command.py
